reset session in sharing service after first request

--- a/src/app/pages/campaigns/tabs/summary/summary.component.html
+++ b/src/app/pages/campaigns/tabs/summary/summary.component.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="tm-20">
-        <button class="button button-green" (click)="self.methods.shareDocument(self.locals.document_id)">Add Player</button>
+        <button class="button button-green" (click)="self.methods.shareDocument()">Add Player</button>
       </div>
     </div>
 
