--- a/src/app/pages/battlemaps/detail/label/label.component.html
+++ b/src/app/pages/battlemaps/detail/label/label.component.html
@@ -1,3 +1,3 @@
 <div class="hide-on-collapsed" [class.bt-hide]="self.methods.combatantSheetConnected(item)">
-  <input type="text" class="form-control big-one" placeholder="Label" (ngModelChange)="self.touch()" [(ngModel)]="item.label">
+  <input type="text" class="form-control big-one" placeholder="Label" (ngModelChange)="self.methods.onLabelChange(item)" [(ngModel)]="item.label">
 </div>
