--- a/src/styles.scss
+++ b/src/styles.scss
@@ -488,6 +488,7 @@
     background: $white;
     position: relative;
     border-radius: 4px;
+    width: 100%;
   }
   .bt-modal-body {
     border-radius: 4px;
