--- a/src/app/pages/battlemaps/scene-types/battle/battle.component.html
+++ b/src/app/pages/battlemaps/scene-types/battle/battle.component.html
@@ -19,7 +19,7 @@
       [ngStyle]="self.methods.getOuterShapeStyle(shape)"
       cdkDrag
       cdkDragBoundary=".map"
-      [cdkDragDisabled]="shape.pinned"
+      [cdkDragDisabled]="self.methods.isItemPinned(shape)"
       (cdkDragReleased)="self.methods.dragStop(shape, $event)"
       (cdkDragStarted)="self.methods.itemDragStart(shape, $event)"
     >
