--- a/src/app/pages/battlemaps/detail/combatant/combatant.component.html
+++ b/src/app/pages/battlemaps/detail/combatant/combatant.component.html
@@ -5,7 +5,7 @@
         <i class="material-icons">arrow_drop_down</i>
         <label>Connect to Combatant</label>
         <select class="form-control" (ngModelChange)="self.methods.onTokenConnectedWithCombatant(item)" [(ngModel)]="item.combatant_id">
-          <option [value]="null">Disconnected</option>
+          <option [ngValue]="null">Disconnected</option>
           <option [value]="combatant.id" *ngFor="let combatant of self.methods.listUnmatchedCombatants()">{{ combatant.name }}</option>
         </select>
       </div>
