--- a/src/app/pages/dnd5e-sheets/tabs/powers/powers.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/powers/powers.component.html
@@ -1,6 +1,5 @@
 <div class="sheet-tab">
-  <bt-tab-upgrade [self]="self" *ngIf="!self.locals.full_access"></bt-tab-upgrade>
-  <div class="group group-powers" *ngIf="self.locals.full_access || !self.locals.permission.writer">
+  <div class="group group-powers">
     <div class="flex-row-mobile flex-config-spaced bmr-40">
       <div class="flex-dynamic">
         <h2 class="group-header">Powers</h2>
