--- a/src/app/pages/dnd5e-sheets/tabs/print/print.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/print/print.component.html
@@ -1,4 +1,4 @@
-<div class="print-container" *ngIf="self.locals.full_access" [ngClass]="self.locals.data.print.clean_pagination ? 'clean-pagination' : ''">
+<div class="print-container" [ngClass]="self.locals.data.print.clean_pagination ? 'clean-pagination' : ''">
   <div class="print-options print-box bm-10">
     <div class="flex-row-all flex-gutters-10">
       <div class="flex-col-4">
