--- a/src/app/pages/pathfinder-sheets/tabs/items/items.component.html
+++ b/src/app/pages/pathfinder-sheets/tabs/items/items.component.html
@@ -1,6 +1,5 @@
 <div class="sheet-tab">
-  <bt-tab-upgrade [self]="self" *ngIf="!self.locals.full_access"></bt-tab-upgrade>
-  <div class="flex-row-tablet flex-gutters-15" *ngIf="self.locals.full_access || !self.locals.permission.writer">
+  <div class="flex-row-tablet flex-gutters-15">
     <div class="flex-col-6">
       <div class="bmr-60">
         <h2 class="group-header">Treasure</h2>
