--- a/src/app/pages/homebrew-kits/homebrew-kits.component.html
+++ b/src/app/pages/homebrew-kits/homebrew-kits.component.html
@@ -3,6 +3,7 @@
     <a class="logo" routerLink="/dashboard"></a>
   </div>
 </div>
+<bt-loading [self]="self"></bt-loading>
 <div class="fpr-40 kit-body">
   <div class="bmr-60 bp-20 border-bottom">
     <label class="weight-bold">Kit Name</label>
